[workspace]
resolver = "2"
members = ["data", "worker", "api", "poller"]

[workspace.dependencies]
async-trait = "0.1.72"
worker = "0.0.17"
worker_logger = { version = "0.2.0", features = ["color"] }
thiserror = "1.0.44"
log = "0.4.19"

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
