[workspace]
resolver = "2"
members = ["logging", "data", "data-internal", "agent", "api", "poller"]

[workspace.dependencies]
async-trait = "0.1.72"
thiserror = "1.0.44"
log = "0.4.19"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "rustls-tls",
    "json",
] }
tokio = { version = "1.29.1", features = ["full"] }
chrono = "0.4"
