[package]
name = "thaliak-api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[features]
debug = ["thaliak-worker/debug"]

[dependencies]
thaliak-worker = { path = "../worker" }
worker = { workspace = true }
