[package]
name = "thaliak-data"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
