[package]
name = "thaliak-data"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
phf = { version = "0.11", features = ["macros"] }

[dev-dependencies]
tokio = { workspace = true }
