[package]
name = "thaliak-poller"
version = "0.0.0"
edition = "2021"

[dependencies]
thaliak-logging = { path = "../logging" }
thiserror = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
