[workspace]
resolver = "3"
members = ["thaliak-api", "thaliak-poller", "thaliak-common", "thaliak-types", "thaliak-migrate"]

[workspace.dependencies]
log = "0.4"
eyre = { package = "color-eyre", version = "0.6" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
dotenvy = "0.15"
sqlx = { version = "0.9.0-alpha.1", features = [ "sqlite", "migrate", "runtime-tokio", "chrono", "sqlx-toml" ] }
jsonwebtoken = "9"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
