[package]
name = "thaliak-db"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy.workspace = true
log.workspace = true
anyhow.workspace = true
chrono = "0.4.23"
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "numeric"] }
diesel_migrations = "2.0.0"
once_cell = "1.16.0"
bigdecimal = "0.3.0"
