[package]
name = "thaliak-analysis"
version = "0.1.0"
edition = "2024"

[dependencies]
thaliak-common = { path = "../thaliak-common", features = ["webhooks"] }
thaliak-types = { path = "../thaliak-types", features = ["db"] }
zipatch = "1.0.1"
axum = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
eyre = { workspace = true }
dotenvy = { workspace = true }
sqlx = { workspace = true }
sha1 = "0.10"
sha2 = "0.10"
md5 = "0.7"
hex = "0.4"
walkdir = "2"
