[package]
name = "thaliak-api"
version = "0.1.0"
edition = "2024"

[dependencies]
thaliak-types = { path = "../thaliak-types", features = ["db", "openapi"] }
thaliak-common = { path = "../thaliak-common" }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
eyre = { workspace = true }
thiserror = { workspace = true }
dotenvy = { workspace = true }
log = { workspace = true }
