[package]
name = "thaliak-common"
version = "0.1.0"
edition = "2024"

[dependencies]
log.workspace = true
chrono.workspace = true
fern = { version = "0.7", features = ["chrono", "colored"] }
sqlx = { workspace = true }
eyre = { workspace = true }

# Optional dependencies for webhooks feature
reqwest = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
tokio = { workspace = true, optional = true }
thaliak-types = { path = "../thaliak-types", features = ["db"], optional = true }

[features]
webhooks = ["reqwest", "serde", "tokio", "thaliak-types"]