[package]
name = "thaliak-poller"
version = "0.1.0"
edition = "2024"

[dependencies]
thaliak-common = { path = "../thaliak-common" }
thaliak-types = { path = "../thaliak-types", features = ["db"] }
zipatch = "1"
log.workspace = true
eyre.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
reqwest.workspace = true
regex.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
sha1 = "0.10"
hex = "0.4"
num_cpus = "1"
tempfile = "3"
rand = "0.8"