[package]
name = "thaliak-types"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# Optional database support
sqlx = { workspace = true, optional = true }

# Optional OpenAPI support
utoipa = { version = "5", optional = true, features = ["chrono"] }

[features]
default = []
db = ["dep:sqlx"]
openapi = ["dep:utoipa"]
